RESOLVED FIXED207440
[LFC] FloatingContext::constraints should take a vertical range instead of just vertical position.
https://bugs.webkit.org/show_bug.cgi?id=207440
Summary [LFC] FloatingContext::constraints should take a vertical range instead of ju...
alan
Reported 2020-02-09 08:26:19 PST
so that the available horizontal space can be adjusted for the entire line in case of IFC.
Attachments
Patch (8.34 KB, patch)
2020-02-09 08:34 PST, alan
no flags
Radar WebKit Bug Importer
Comment 1 2020-02-09 08:26:43 PST
alan
Comment 2 2020-02-09 08:34:13 PST
WebKit Commit Bot
Comment 3 2020-02-09 09:46:09 PST
Comment on attachment 390205 [details] Patch Clearing flags on attachment: 390205 Committed r256101: <https://trac.webkit.org/changeset/256101>
WebKit Commit Bot
Comment 4 2020-02-09 09:46:10 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.