[LFC] FloatingContext::constraints should take a vertical range instead of just vertical position. https://bugs.webkit.org/show_bug.cgi?id=207440 <rdar://problem/59295022>

Reviewed by Antti Koivisto.

In an IFC, this covers the entire line when searching for intrusive float to shrink the available horizontal space.
(This fix is limited to content with fixed line height)

* layout/blockformatting/BlockFormattingContext.cpp:
(WebCore::Layout::BlockFormattingContext::usedAvailableWidthForFloatAvoider const):
* layout/floats/FloatingContext.cpp:
(WebCore::Layout::FloatingContext::constraints const):
* layout/floats/FloatingContext.h:
* layout/inlineformatting/InlineFormattingContext.cpp:
(WebCore::Layout::InlineFormattingContext::lineLayout):
(WebCore::Layout::InlineFormattingContext::constraintsForLine):


Canonical link: https://commits.webkit.org/220437@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@256101 268f45cc-cd09-0410-ab3c-d52691b4dbfc