Source/WebCore/layout/floats/FloatingContext.h
@@ -64,7 +64,7 @@ public:
         Optional<PointInContextRoot> left;
         Optional<PointInContextRoot> right;
     };
-    Constraints constraints(PositionInContextRoot verticalPosition) const;
+    Constraints constraints(LayoutUnit logicalTop, LayoutUnit logicalBottom) const;
     void append(const Box&);
     void remove(const Box&);
 
